Fixed .messages overflow
Fixed the problem of the chatbox being pushed off the page when the message box overflows... 
- dev1nee

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 .messages {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 85%;
 }
 
 .message-scroller {
